--- a/src/QuizInfo_Page.html
+++ b/src/QuizInfo_Page.html
@@ -62,22 +62,22 @@
                     <p class="px-[10px]">Please read the quiz information before you start</p>
                     <div class="grid grid-cols-1 p-[10px] py-[1rem] max-[1100px]:grid-cols-1">
                         <div class="px-[10px] py-[20px]">
-                            <div class="flex items-center py-[10px] rounded-[5px] mb-[20px] bg-[#101820] px-[10px]">
+                            <div class="flex items-center py-[10px] rounded-[5px] mb-[20px] bg-[#101820] px-[10px] hover:bg-[#102741] transition-all ease-in-[0.5s]">
                                 <i class="fa-solid fa-info text-[#FEE715]"></i>
                                 <h4 class="ml-[10px] text-gray-200">HTML AND CSS ONLY</h4>
                             </div>
 
-                            <div class="flex items-center py-[10px] rounded-[5px] mb-[20px] bg-[#101820] px-[10px]">
+                            <div class="flex items-center py-[10px] rounded-[5px] mb-[20px] bg-[#101820] px-[10px] hover:bg-[#102741] transition-all ease-in-[0.5s]">
                                 <i class="fa-solid fa-info text-[#FEE715]"></i>
                                 <h4 class="ml-[10px] text-gray-200">25 Questions covering of HTML</h4>
                             </div>
 
-                            <div class="flex items-center py-[10px] rounded-[5px] mb-[20px] bg-[#101820] px-[10px]">
+                            <div class="flex items-center py-[10px] rounded-[5px] mb-[20px] bg-[#101820] px-[10px] hover:bg-[#102741] transition-all ease-in-[0.5s]">
                                 <i class="fa-solid fa-info text-[#FEE715]"></i>
                                 <h4 class="ml-[10px] text-gray-200">25 Questions covering of CSS</h4>
                             </div>
 
-                            <div class="flex items-center py-[10px] rounded-[5px] bg-[#101820] px-[10px]">
+                            <div class="flex items-center py-[10px] rounded-[5px] bg-[#101820] px-[10px] hover:bg-[#102741] transition-all ease-in-[0.5s]">
                                 <i class="fa-solid fa-info text-[#FEE715]"></i>
                                 <h4 class="ml-[10px] text-gray-200">Fill in the blank and Multiple Choice</h4>
                             </div>
