--- a/src/Home_Page.html
+++ b/src/Home_Page.html
@@ -36,7 +36,7 @@
                 </li>
             </ul>
             <div class="py-[2rem] border-t-[1px] border-white items-center px-[20px] text-center">
-                <button type="button" id="logout-button" class="p-[1rem] bg-[#FEE715] mt-[2rem] w-[200px] text-black font-semibold rounded-[5px] transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</button>
+                <button type="button" id="logout-button" class="p-[1rem] bg-[#FEE715] mt-[2rem] w-[200px] text-black font-semibold rounded-[5px] transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70 shadow-md"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</button>
             </div>
         </div>
 
@@ -56,17 +56,17 @@
                 </div>
 
                 <div class="grid grid-cols-3 max-[1045px]:grid-cols-1 gap-[2rem] mt-[2rem] max-[1200px]:gap-[10px]">
-                    <div class="border-gray-200 border shadow-sm p-[2rem] rounded-[5px] bg-white hover:shadow-md transition-all ease-in-[0.5s]">
+                    <div class="border-gray-200 border shadow-sm p-[2rem] rounded-[5px] bg-white hover:shadow-md transition-all ease-in-[0.5s] border-l-[10px] border-l-[#101820]">
                         <div class="items-center flex ">
                             <i class="fa-solid fa-hourglass-start mr-[10px] font-bold text-[1.50rem] border-black border-2 p-[10px] text-blue-600 bg-[#101820] items-center text-center rounded-[10px] max-[1160px]:text-[0.90rem]"></i>
-                            <a href="#" class="p-[10px] bg-[#FEE715] rounded-[10px] transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
+                            <a href="#" class="p-[10px] bg-[#FEE715] rounded-[10px] transition-all shadow-md shadow-gray-300 ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
                                 <input type="button" value="Start Quiz" class="font-semibold">
                                 <i class="fa-solid fa-angle-right"></i>
                             </a>
                         </div>
                     </div>
 
-                    <div class="border-gray-200 border shadow-sm p-[2rem] rounded-[5px] bg-white hover:shadow-md transition-all ease-in-[0.5s]">
+                    <div class="border-gray-200 border shadow-sm p-[2rem] rounded-[5px] bg-white hover:shadow-md transition-all ease-in-[0.5s] border-l-[10px] border-l-[#101820]">
                         <div class="text-black flex items-center">
                             <i class="fa-solid fa-tag font-bold text-[1.50rem] border-black border-2 p-[10px] text-blue-600 bg-[#101820] items-center text-center rounded-[10px] max-[1160px]:text-[0.90rem]"></i>
                             <h4 class="mr-[10px] font-medium ml-[10px] text-[1.50rem] max-[1310px]:text-[1.20rem] text-gray-600">Section:</h4>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
 
-                    <div class="border-gray-200 border shadow-sm p-[2rem] rounded-[5px] bg-white hover:shadow-md transition-all ease-in-[0.5s]">
+                    <div class="border-gray-200 border shadow-sm p-[2rem] rounded-[5px] bg-white hover:shadow-md transition-all ease-in-[0.5s] border-l-[10px] border-l-[#101820]">
                         <div class="text-black flex items-center">
                             <i class="fa-solid fa-chart-bar font-bold text-[1.50rem] border-black border-2 p-[10px] text-blue-600 bg-[#101820] items-center text-center rounded-[10px] max-[1160px]:text-[0.90rem]"></i>
                             <h4 class="mr-[10px] font-medium ml-[10px] text-[1.50rem] max-[1310px]:text-[1.20rem] text-gray-600">Overall Score:</h4>
