--- a/src/Home_Page.html
+++ b/src/Home_Page.html
@@ -59,7 +59,7 @@
                     <div class="border-gray-200 border shadow-sm p-[2rem] rounded-[5px] bg-white hover:shadow-md transition-all ease-in-[0.5s] border-l-[10px] border-l-[#101820]">
                         <div class="items-center flex ">
                             <i class="fa-solid fa-hourglass-start mr-[10px] font-bold text-[1.50rem] border-black border-2 p-[10px] text-blue-600 bg-[#101820] items-center text-center rounded-[10px] max-[1160px]:text-[0.90rem]"></i>
-                            <a href="#" class="p-[10px] bg-[#FEE715] rounded-[10px] transition-all shadow-md shadow-gray-300 ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
+                            <a href="./QuizChoices_Page.html" class="p-[10px] bg-[#FEE715] rounded-[10px] transition-all shadow-md shadow-gray-300 ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
                                 <input type="button" value="Start Quiz" class="font-semibold">
                                 <i class="fa-solid fa-angle-right"></i>
                             </a>
