--- a/src/Home_Page.html
+++ b/src/Home_Page.html
@@ -77,7 +77,7 @@
                     <div class="border-gray-200 border shadow-sm p-[2rem] rounded-[5px] bg-white hover:shadow-md transition-all ease-in-[0.5s] border-l-[10px] border-l-[#101820]">
                         <div class="text-black flex items-center">
                             <i class="fa-solid fa-chart-bar font-bold text-[1.50rem] border-black border-2 p-[10px] text-blue-600 bg-[#101820] items-center text-center rounded-[10px] max-[1160px]:text-[0.90rem]"></i>
-                            <h4 class="mr-[10px] font-medium ml-[10px] text-[1.50rem] max-[1310px]:text-[1.20rem] text-gray-600">Overall Score:</h4>
+                            <h4 class="mr-[10px] font-medium ml-[10px] text-[1.50rem] max-[1310px]:text-[1.20rem] text-gray-600">Overall Points:</h4>
                             <h5 id="total-points" class="text-[1.50rem] max-[1310px]:text-[1.20rem] font-bold"></h5>
                         </div>
                     </div>
