--- a/src/QuizChoices_Page.html
+++ b/src/QuizChoices_Page.html
@@ -31,7 +31,7 @@
                     such as text, images, and links, and works alongside CSS for styling and JavaScript for interactivity. 
                     Understanding HTML is the first step in learning web development, and this quiz will help you test and strengthen your knowledge of this essential language.
                 </p>
-                <a href="#" class="p-[10px] bg-[#FEE715] rounded transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
+                <a href="./HTML_(QuizPoint).html" class="p-[10px] bg-[#FEE715] rounded transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
                     <i class="fa-solid fa-play"></i>
                     <input type="button" value="Start Quiz">
                 </a>
@@ -44,7 +44,7 @@
                     While HTML provides the structure, CSS adds colors, layouts, fonts, and designs to bring websites to life. It allows developers to control how elements appear on different devices, 
                     making web pages responsive and user-friendly. This quiz will help you test your knowledge of CSS and sharpen your skills in styling web pages.
                 </p>
-                <a href="#" class="p-[10px] bg-[#FEE715] rounded transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
+                <a href="./CSS_(QuizPoint).html" class="p-[10px] bg-[#FEE715] rounded transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
                     <i class="fa-solid fa-play"></i>
                     <input type="button" value="Start Quiz">
                 </a>
