update, HTML FILL IN THE BLANK

--- a/src/HTML_(QuizPoint).html
+++ b/src/HTML_(QuizPoint).html
@@ -29,7 +29,7 @@
                 <p class="mb-[1.50rem] text-[#fff6a7] text-[1.80rem]">
                     FILL IN THE BLANK
                 </p>
-                <a href="#" class="p-[10px] bg-[#FEE715] rounded transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
+                <a href="./HTML(BLANK)_Page.html" class="p-[10px] bg-[#FEE715] rounded transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
                     <i class="fa-solid fa-play"></i>
                     <input type="button" value="Start Quiz">
                 </a>
@@ -40,7 +40,7 @@
                 <p class="mb-[1.50rem] text-[#fff6a7] text-[1.80rem]">
                     MULTIPLE CHOICE
                 </p>
-                <a href="#" class="p-[10px] bg-[#FEE715] rounded transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
+                <a href="./HTML(CHOICE)_Page.html" class="p-[10px] bg-[#FEE715] rounded transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
                     <i class="fa-solid fa-play"></i>
                     <input type="button" value="Start Quiz">
                 </a>
